# chattypaws

./: .env.example  .gitignore  LICENSE  README.md  commitlint.config.js  docker-compose.yml  lefthook.rc  lefthook.yml  package-lock.json  package.json
.cursor/rules/: architecture-scale-and-future.mdc  conventional-commits-workspace.mdc  discuss-before-implement.mdc  explain-before-commit.mdc  reference-and-update-plans.mdc
.lefthook/commit-msg/: run-commitlint.sh
backend/: config.py  main.py  requirements.txt
backend-python/: .dockerignore  Dockerfile  README.md  __init__.py  config.py  db.py  detector.py  main.py  pyproject.toml  requirements.txt
backend-python/data/: button_regions.json
docs/: PROJECT_PLAN.md
pwa/: README.md  index.html  package.json
pwa/src/: App.tsx
