[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chattypaws-backend"
version = "0.1.0"
description = "Chattypaws backend: API, detector, and event storage"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["data"]
